--- a/SocialMedia/src/main/resources/application.properties
+++ b/SocialMedia/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=SocialMedia
+spring.datasource.url=jdbc:mysql://localhost/social_media
+spring.datasource.username=root
+spring.datasource.password=Hello@123
+
+spring.jpa.hibernate.ddl-auto=update
+
